--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@ngrx/store": "^8.1.0",
     "@ngrx/store-devtools": "^8.1.0",
     "core-js": "^3.1.4",
-    "jest": "^24.8.0",
     "jest-preset-angular": "^7.1.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.2",
@@ -43,10 +42,18 @@
     "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.14",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^24.0.15",
     "@types/node": "~12.6.8",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "codelyzer": "~5.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
